--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "sweetalert2": "^11.26.3"
